--- a/AuthController/Main.storyboard
+++ b/AuthController/Main.storyboard
@@ -32,7 +32,7 @@
                                     <constraint firstAttribute="height" constant="128" id="xwl-9n-He9"/>
                                 </constraints>
                                 <attributedString key="attributedText">
-                                    <fragment content="File Store">
+                                    <fragment content="Auth Controller">
                                         <attributes>
                                             <font key="NSFont" size="24" name="HelveticaNeue-Bold"/>
                                             <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural"/>
@@ -47,7 +47,7 @@ Cg
                                             <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural"/>
                                         </attributes>
                                     </fragment>
-                                    <fragment content="A new type of document cloud based around proximity. ">
+                                    <fragment content="A custom auth controller.">
                                         <attributes>
                                             <font key="NSFont" size="18" name="HelveticaNeue-Light"/>
                                             <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural"/>
@@ -56,7 +56,7 @@ Cg
                                 </attributedString>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yvv-Dt-YPB">
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yvv-Dt-YPB">
                                 <rect key="frame" x="66" y="401" width="100" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="Lyi-Mk-v8O"/>
@@ -68,7 +68,7 @@ Cg
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j67-qG-BBm">
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j67-qG-BBm">
                                 <rect key="frame" x="434" y="401" width="100" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="QSg-Ik-0vU"/>
